# matiopp

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  mat.h  matiopp.h
tests/: CMakeLists.txt  README.md  TESTDATA-cardinality_exception.mat  TESTDATA-sane.mat  main.cc  matiopp-test.cc
